[tool.poetry]
name = "repo-analyzer"
version = "0.1.0"
description = ""
authors = ["Jacob Jewell <jacobjewell@eflexsystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nest-asyncio = "^1.5.6"
httpx = "^0.24.0"
llama-index = "^0.6.8"
ipython = "^8.13.2"
pyright = "^1.1.308"
pymongo = "^4.3.3"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="/Users/jacob/Library/Caches/pypoetry/virtualenvs"
venv="repo-analyzer-i7m7kXXc-py3.11"
